--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!--https://elisonevaristo.github.io/ProgressiveWebAppsBase/public_html/#!/
+    https://tomitm.github.io/appmanifest/
+-->
 <html lang="pt-br" ng-app="lojaApp" ng-controller="lojaCtrl">
     <head>
         <meta charset="UTF-8">
@@ -22,6 +26,16 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="Loja">
+        <meta name="apple-mobile-web-app-title" content="Loja">
+        <meta name="msapplication-navbutton-color" content="#FFFFFF">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="msapplication-starturl" content="index.html">
+
 
         <link href="js/libs/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="js/libs/twitter-bootstrap/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
